# private-chat

./: .env.example  .gitignore  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: release-tauri.yml
docs/: SCREEN_AUDIO_CAPTURE_PLAN.md
public/: opensearch.xml
public/icons/: opensearch.xml
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  oauth.rs
src/api/: base-client.ts  constants.ts  query-keys.ts
src/components/: AdminProtectRoute.tsx  DeployPrivateAssistant.tsx  ProtectedRoute.tsx
src/hooks/: useActiveSubscription.ts  useAppInitialization.ts  useConversationWebSocket.ts  useEnterpriseInit.ts  useInitRemoteSettings.ts  useIsOnline.ts  useLowBalance.ts  useNearBalance.ts  usePWAUpdate.ts  useProgressiveText.ts  useScrollHandler.ts
src/i18n/: todo.ts
src/lib/: commands.ts  constants.ts  db.ts  event.ts  index.ts  message-converter.ts  network.ts  offlineCache.ts  plans.ts  posthog.ts  sync.ts  time.ts  utm.ts  websocket.ts
src/pages/: AssistantPage.tsx  AuthPage.tsx  ChatController.tsx  ConversationWrapper.tsx  CookiePrivacyPage.tsx  Home.tsx  NearLogin.tsx  NewChat.tsx  PrivacyPage.tsx  PublicConversationPage.tsx  PublicSharedPage.tsx  SharedPage.tsx  TermsPage.tsx  WelcomePage.tsx  routes.ts
src/stores/: useAuditStore.ts  useChatStore.ts  useConversationStore.ts  useGatewayAttestationStore.ts  useMessagesSignaturesStore.ts  useMessagesStore.ts  useModelAttestationStore.ts  useOrganizationStore.ts  usePermissionsStore.ts  useStreamStore.ts  useViewStore.ts  useWorkspaceStore.ts
src/styles/: components.css  global.css
src/types/: enterprise.ts  index.ts  openai.ts  tauri-api.d.ts
(+160 files in other folders)
