[package]
name = "private-chat"
version = "0.0.0"
description = "NEAR AI Private Chat"
authors = ["NEAR AI"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.6", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["api-all", "system-tray", "updater"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
