[package]
name = "private-chat"
version = "0.0.0"
description = "NEAR AI Private Chat"
authors = ["NEAR AI"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.5", features = ["tray-icon"] }
tauri-plugin-notification = "2.3"
tauri-plugin-updater = { version = "2.9", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
